PID file to standard OS locations. Reported by Serge Ivanchenko. [David]

=item *

The default location for the FTP server's log files is now the F<log>
subdirectory of the bricolage root directory, rather than the bricolage root
directory itself. This is what comments in F<bricoalge.conf> have always
suggested, even if L<Bric::Admin> and the code did not. [David]

=back

=head2 Bug Fixes

=over

=item *

Fixed a regular expression typo that led to a test failure. [Greg Heo]

=item *

Adding a category to a story in a multi-site installation no longer has
a chance to throw a "Too many category objects found" error. [Greg Heo]

=item *

Moved document expriration on deletion from L<Bric::Biz::Asset> to
L<Bric::Biz::Asset::Business> because it's useless for templates and left
no-op job records lying around when templates were deleted. This code path
only executes when the C<EXPIRE_ON_DEACTIVATE> F<bricolage.conf> directive is
enabled. [David]

=item *

Fixed document expiration when the C<EXPIRE_ON_DEACTIVATE> F<bricolage.conf>
directive is enabled so that it doesn't try to expire documents that have
never been published, or media docuemnts that have no URI associatd with them.
Thanks to Aaron Fuleki and Denison University for the report. [David]

=item *

L<Bric::Util::Burner>'s C<publish()> method no longer removes documents from
workflow after publishing them, as such is the responsbility of the code that
calls publish. The publish callback already did, and now so does the
L<Bric::SOAP::Workflow> C<publish()> method. Thanks to David Beaudet for the
report and Aaron Fuleki for the steps to replicate (Bug #98). [David]

=item *

Fixed a bug where contributor and category search results would be propagated
to the contributor and category editing screens with a story or media
document. Searches from within documents should cache their own results,
separate from the admin search interfaces. [David]

=item *
