@@ -72,7 +72,7 @@ new Ajax.Autocompleter(
         onEmpty:    function() { Element.show('new_cat_warning'); },
         onNotEmpty: function() { Element.hide('new_cat_warning') },
         onEnter:    function() { catListMan.add('new_category_uri') },
-        minChars:   2,
+        minChars:   <% CATEGORY_MIN_CHARS %>,
         indicator: 'category_autocomplete_indicator',
         parameters: 'site_id=<% $site_id %>&key=story'
     }
