@@ -403,12 +403,25 @@ PERL_LOADER               = use HTML::Entities; use Bric::Util::Burner qw(:modes
 # FTP_LOG                 = /usr/local/bricolage/log/ftp.log
 # FTP_PID_FILE            = /usr/local/bricolage/log/ftp.pid
 
-# Category browser setting. Enabling this directive makes the Media and Story
-# profiles use the category browser. This is useful if you have a lot of
-# categories, so they won't all be loaded into a big select list each time you
-# edit a Media or Story document. It also simplifies changing a category.
-# Disabled by default.
+# Category association settings. The CATEGORY_MIN_CHARS tells the UI how many
+# characters the user needs to type in before it suggests a list of possible
+# options. By default this is 1, since to begin with a Bricolage intallation
+# wont have many categories. But if you start to find that it's taking to long
+# to suggest categories because there are just too many (and they all start
+# with the first character, "/"), try changing it to 2.
+#
+# The CATEGORY_MIN_CHARS_TMPL fulfills the same task for associating
+# categories with templates, but you'll likely want to leave this set to 1,
+# since most templates go into the root category.
 
+# If for some reason your users don't like the autosuggest siget, set the
+# ENABLE_CATEGORY_BROWSER to Yes to make the Media and Story profiles use the
+# category browser for associating categories. It's not available in the New
+# Story or New Media screens, but for adding secondary categories to a story,
+# it's great.
+
+CATEGORY_MIN_CHARS        = 1
+CATEGORY_MIN_CHARS_TMPL   = 1
 ENABLE_CATEGORY_BROWSER   = No
 
 # Content compression setting. Enabling this directive makes the Bricolage UI
